--- a/package3/DESCRIPTION
+++ b/package3/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
     person("jorge villar", email = "jvf96@student.liu.se", role = "aut"))
 Maintainer: Ashraful Alam <ashrafiu09@gmail.com>
 Description: The lab constists of writing a package that is version controlled on github.com.
-License: cc0
+License: CC0
 RoxygenNote: 6.0.1
 LazyData: true
 Suggests: testthat
